Non -reduction sum of Tensor

--- a/02.preliminaries/06.Tensor_properties.ipynb
+++ b/02.preliminaries/06.Tensor_properties.ipynb
@@ -30,7 +30,31 @@
     "# sum along the first axis (columns)\n",
     "print(f\"sum of columns: {A.sum(axis=0)}\") \n",
     "# sum along the second axis (rows)\n",
-    "print(f\"sum of rows: {A.sum(axis=1)}\") "
+    "print(f\"sum of rows: {A.sum(axis=1)}\") \n",
+    "\n",
+    "#cumulative sum\n",
+    "print(A.sum() == A.sum(axis=[0, 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce66f00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#non-reduction sum \n",
+    "sum_A = A.sum(axis=1, keepdims =True)\n",
+    "print(f\"sum of rows with keepdims: {sum_A}\")\n",
+    "print(f\"shape of A: {A.shape}\")\n",
+    "print(f\"shape of sum_A: {sum_A.shape}\")\n",
+    "\n",
+    "#same for columns \n",
+    "sum_A_col = A.sum(axis=0, keepdims=True)\n",
+    "print(f\"sum of columns with keepdims: {sum_A_col}\")\n",
+    "print(f\"shape of sum_A_col: {sum_A_col.shape}\")\n",
+    "\n",
+    "print(A/sum_A)"
    ]
   },
   {
