Dot produts of two tensor of equal shape

--- a/02.preliminaries/06.Tensor_properties.ipynb
+++ b/02.preliminaries/06.Tensor_properties.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "#Reduction\n",
-    "x = torch.arange(3, dtype=torch.float32)\n",
+    "x = torch.arange(9, dtype=torch.float32)\n",
     "print(x)\n",
     "print(f\"sum of tensor's element:  {x.sum()}\")\n",
     "\n",
@@ -63,7 +63,11 @@
    "id": "37e793cb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#dot product (inner product):  x tranpose(y)\n",
+    "y = torch.ones(9, dtype=torch.float32)\n",
+    "print(f\"dot product of x and y: {torch.dot(x,y)}\")"
+   ]
   }
  ],
  "metadata": {
