Matrix - vector multiplication

--- a/02.preliminaries/06.Tensor_properties.ipynb
+++ b/02.preliminaries/06.Tensor_properties.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "#Reduction\n",
-    "x = torch.arange(9, dtype=torch.float32)\n",
+    "x = torch.arange(9)\n",
     "print(x)\n",
     "print(f\"sum of tensor's element:  {x.sum()}\")\n",
     "\n",
@@ -65,8 +65,26 @@
    "outputs": [],
    "source": [
     "#dot product (inner product):  x tranpose(y)\n",
-    "y = torch.ones(9, dtype=torch.float32)\n",
+    "y = torch.ones(9)\n",
     "print(f\"dot product of x and y: {torch.dot(x,y)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba2d3bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''matrix- vector product\n",
+    "m * n matrix A and n - dimensional vector x\n",
+    "result is m - dimensional vector'''\n",
+    "\n",
+    "print(\"/n\",A.shape)\n",
+    "print(\"/n\",x.shape)\n",
+    "\n",
+    "#so here n = 9 ,we can perform matrix-vector product, Here @ is used for matrix-vector or matrix-matrix multiplication\n",
+    "print(f\"matrix-vector product: {torch.mv(A, x), A@x}\")\n"
    ]
   }
  ],
